scss/layout/_coding.scss
// ========================================
// Coding
// ========================================

.example-container	{
	background: $news-border;
	padding: 1rem;
	@include mqm(medium)	{
		border-radius: 1rem;
		margin: 1rem 0 2rem;
	}
}

.coding-container	{
	display: flex;
	flex-direction: column;
	align-items: center;
	@extend %coding-container;
}

.code-snippet			{
	@extend %code-snippet;
	@include mqm(large){
		margin-top: 1rem;
	}
}

.code-snippet-info	{
	padding: 1rem 1rem 0;
	@include mqm(large){
		width: 80%;
	}
}

.content-container-half	{
	@include mqm(small)	{
		display: flex;
		justify-content: space-evenly;
		align-items: flex-start;
		padding: 2rem;
	}
}

.content-container-half.code-snippet-info	{
	padding: 1rem 1rem 0;
	@include mqm(small){
		max-width: 39%;
	}
	@include mqm(medium){
		min-width: 49%;
	}
	@include mqm(large){
		min-width: 59%;
	}
}


.code-snippet-half		{
	@extend %code-snippet;
	@include mqm(small)	{
		min-width: 59%;
		margin-top: 1rem;
	}
	@include mqm(medium)	{
		max-width: 49%;
		margin-top: 2rem;
	}
	@include mqm(large){
		max-width: 39%;
	}
}

